axel randolph: version avec httpGet() methode + fix parseur XML